[metadata]
name = tpRigToolkit-tools-controlrig
description = Tool to create rig curve based controls
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: tpRigToolkit.tools.controlrig.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpRigToolkit/tpRigToolkit-tools-controlrig

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    tpRigToolkit-core
    tpRigToolkit-libs-controlrig

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1